# badgerdoc

./: .gitignore  .pre-commit-config.yaml  .requirements.txt  .travis.yaml  .travis.yml  Dockerfile  Dockerfile.domino  Domino.dockerfile  Makefile  README.md  bordered.py  cells.json  concordance_pandas.py  dev-requirements.in  dev-requirements.txt  download.sh  header_async.py  headers.json  helpers.py  inference.py  k8s_job_demo.yaml  k8s_job_demo_excel.yaml  pipeline.py  prepare_bordered_dataset.py  prepare_dataset.py  pyproject.toml  requirements.in  requirements.txt  semi_bordered.py  setup.py  setup.sh  utils.py
.train/: pyvenv.cfg
badgerdoc/: inference.py  pipeline.py  prepare_dataset.py  preprocessing.py  semi_bordered.py
bordered_tables/: bordered_tables_detection.py  models.py  utils.py
configs/: cascadetabnet_config_5_cls.py  cascadetabnet_config_5_cls_w18.py  cascadetabnet_config_cut_no_mask.py  config_3_cls_w18.py  faster-RCNN-GOD.py  swin_config.py
excel_extractor/: __init__.py  converter.py  excel_extractor.py  excel_run.py  extractor.py  writer.py
excel_header_training/: README.md  extract_header.py
language/: cells.json  cells_gp.json  headers.json  headers_exc.json  headers_gp.json
paddle_detector/: download.sh  utility.py
pdf_preprocessor/: README.md  image_extractor.py  pdf_preprocesser.py  requirements.txt  text_extractor.py
result_example/: epoch_36_mmd_v2_1607473987.json
table_detection/: common.py  preprocessing.py
table_extractor/: excel_run.py  run.py
tests/: conftest.py
training/: preprocess.py  readme.md  train.py  (+2 more)
(+63 files in other folders)
