[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.flakehell]
exclude = ["README.rst", "README.md"]
format = "colored"
max_line_length = 88
show_source = true
whitelist = "../../allowlist.txt"

[tool.flakehell.plugins]
flake8-bandit = ["+*", "-S322"]
flake8-bugbear = ["+*"]
flake8-builtins = ["+*"]
flake8-comprehensions = ["+*"]
flake8-darglint = ["+*"]
flake8-docstrings = ["+*"]
flake8-eradicate = ["+*"]
flake8-isort = ["+*"]
flake8-mutable = ["+*"]
flake8-pytest-style = ["+*"]
flake8-spellcheck = ["+*"]
mccabe = ["+*"]
pep8-naming = ["+*"]
pycodestyle = ["+*"]
pyflakes = ["+*"]
pylint = ["+*"]

[tool.poetry]
name = "badgerdoc"
version = "0.1.0"
description = "Document table recognizer"
authors = ["ikiselev7 <ikiselev7@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
gdown = "3.12.2"
torch = "1.7.0"
torchvision = "0.8.1"
Pillow = "7.2.0"
click = "7.1.2"
scipy = "1.5.4"
pdf2image = "1.14.0"
python-poppler = "0.2.2"
tesserocr = "2.5.1"
nltk = "3.5"
openpyxl = "3.0.6"
mmcv-full = {path = "mmcv/mmcv_full-1.2.1+torch1.7.0+cpu-cp38-cp38-manylinux1_x86_64.whl"}
scikit-learn = "0.24.1"
smart-open = "^5.1.0"
python-decouple = "^3.4"
boto3 = "^1.17.107"

[tool.poetry.dev-dependencies]
ipython = "^7.23.1"
torch = "1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
